  * Set Acquire::Languages to none since translations aren't needed.
  * Avoid warnings regarding missing /etc/apt/{apt.conf.d,preferences.d}
    by setting their respective apt config variables to /dev/null.
  * Duplicate Apt::Architecture into Apt::Architectures because of course
    apt has two options, the latter getting foreign architectures if not
    specified, even if the former is.

  [ Paul Tagliamonte ]
  * Add support for the NanoPiNeo

  [ Aurelien Jarno ]
  * Drop the build-depends on libnewt0.52, the library now provides an udeb.

  [ Vagrant Cascadian ]
  * [arm64] Generate u-boot media for pine64_plus:
    - Add Build-Depends on u-boot-sunxi, atf-allwinner, u-boot-tools and
      device-tree-compiler.
    - Add atf-allwinner to Built-Using.
  * [armhf] netboot: Enable grub-efi mini.iso.

  [ John Paul Adrian Glaubitz ]
  * hppa: Use compressed kernel image by default.
  * sparc64: Use xz compression for initrd during netboot image build.

  [ Paul Wise ]
  * Switch get-packages from setting apt-get options through the command
    line to writing a configuration file referred to by APT_CONFIG. The
    latter should ensure a stricter separation from the system config.

  [ Samuel Thibault ]
  * Do not create /dev/console and /dev/null on hurd-any, they are initialized
    at runtime.

  [ Vagrant Cascadian ]
  * [armhf] Add support for Cubietruck_plus.

 -- Cyril Brulebois <kibi@debian.org>  Tue, 26 Dec 2017 15:10:47 +0100

debian-installer (20171204) unstable; urgency=medium

  [ John Paul Adrian Glaubitz ]
  * m68k: Add pata-modules to cdrom package list.
  * m68k: Add ide-core-modules and ide-modules to cdrom package list.
  * m68k: Use uncompressed kernel image by default.

  [ Cyril Brulebois ]
  * Bump Linux kernel ABI from 4.12.0-1 to 4.12.0-2.
  * Add support for SNAPSHOT_TS to use a specific timestamp of the Debian
    archive on snapshot.debian.org instead of the detected mirror; disable