@@ -12,6 +12,9 @@ debian-installer (2018XXXX) UNRELEASED; urgency=medium
   * Duplicate Apt::Architecture into Apt::Architectures because of course
     apt has two options, the latter getting foreign architectures if not
     specified, even if the former is.
+  * Run fc-cache when /etc/fonts or /usr/share/fonts exist, to avoid
+    having to generate UUIDs at runtime, which can be hard because of
+    missing entropy (Closes: #898468).
 
   [ Paul Tagliamonte ]
   * Add support for the NanoPiNeo
